[package]
name = "juno"
version = "0.1.3"
authors = ["Rakshith Ravi <rakshith.ravi@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
lazy_static = "1.4.0"
serde_json = "1.0"
futures = "0.3.1"
futures-util = "0.3.1"
rand = "0.7.2"
ctrlc = "3.1.3"
semver = "0.9.0"
colored = "1.9.1"
fslock = "0.1.6"
async-std = { version = "1.5.0", features = ["attributes"] }

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'  # Optimize for size.
codegen-units = 1
