[package]
name = "juno"
version = "0.1.3"
authors = ["Rakshith Ravi <rakshith.ravi@gmx.com>"]
edition = "2018"
description = "Minimalistic, unpoinionated micro-services framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
lazy_static = "*"
serde_json = "*"
futures = "*"
futures-util = "*"
rand = "*"
ctrlc = "*"
semver = "*"
colored = "*"
fslock = "*"
async-std = { version = "*", features = ["attributes"] }
juno = "0.1.4-beta"
async-trait = "*"

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'  # Optimize for size.
codegen-units = 1
